카카오맵api를 활용한 매장찾기 임시구현

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;700&family=Roboto:ital,wght@0,100;0,400;0,700;1,700&display=swap"
       rel="stylesheet">
+      <!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	fc2ef6605022989f52a62a9d7d6924c8"></script> -->
+      <script type="text/javascript"
+        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fc2ef6605022989f52a62a9d7d6924c8&libraries=services,clusterer,drawing"></script>
     <title>PaulBasset|CLONE</title>
   </head>
   <body>
