--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,21 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- font-awesome 4.7.0 -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;700&family=Roboto:ital,wght@0,100;0,400;0,700;1,700&display=swap"
-      rel="stylesheet">
-      <script type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fc2ef6605022989f52a62a9d7d6924c8&libraries=services,clusterer,drawing"></script>
-        <!-- <script type="text/javascript"
+      rel="stylesheet"
+    />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fc2ef6605022989f52a62a9d7d6924c8&libraries=services,clusterer,drawing"
+    ></script>
+    <!-- <script type="text/javascript"
           src="//dapi.kakao.com/v2/maps/sdk.js?appkey=	ce79c2cda95d909fd5b4b8a1008af9b08&libraries=services,clusterer,drawing"></script> -->
-    <title>PaulBasset|CLONE</title>
+    <title>PaulBasset | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
